--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	maven {
-		name = "CottonMC"
-		url = "https://server.bbkr.space/artifactory/libs-release"
-	}
+//	maven {
+//		name = "CottonMC"
+//		url = "https://server.bbkr.space/artifactory/libs-release"
+//	}
 }
 
 dependencies {
@@ -32,7 +32,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// CottonMC LibGui to make the inventories so much easier
-	modImplementation include("io.github.cottonmc:LibGui:5.4.2")
+	//modImplementation include("io.github.cottonmc:LibGui:5.4.2")
 }
 
 processResources {
