--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,6 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
 	maven {
 		name = "CottonMC"
 		url = "https://server.bbkr.space/artifactory/libs-release"
@@ -33,6 +28,7 @@ dependencies {
 
 	// CottonMC LibGui to make the inventories so much easier
 	modImplementation include("io.github.cottonmc:LibGui:5.4.2+1.18.2")
+	include "io.github.cottonmc:LibGui:5.4.2+1.18.2"
 }
 
 processResources {
