--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.56.0+1.19
+	libgui_version=6.0.0-beta.5+1.19-pre1
+	patchouli_version=1.19-75-FABRIC
